--- a/samples/Sample.NavigationService/Sample.NavigationService.csproj
+++ b/samples/Sample.NavigationService/Sample.NavigationService.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="29.0.2" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.29.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\LightOps.Commerce.Services.Navigation.Backends.InMemory\LightOps.Commerce.Services.Navigation.Backends.InMemory.csproj" />
     <ProjectReference Include="..\..\src\LightOps.Commerce.Services.Navigation\LightOps.Commerce.Services.Navigation.csproj" />
   </ItemGroup>
 
