Add health gRPC service.

--- a/src/LightOps.Commerce.Services.Navigation/LightOps.Commerce.Services.Navigation.csproj
+++ b/src/LightOps.Commerce.Services.Navigation/LightOps.Commerce.Services.Navigation.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Protobuf Include="**/*.proto" />
+    <Protobuf Include="**/*.proto" GrpcServices="Server" />
   </ItemGroup>
 
   <ItemGroup>
