Add gRPC probe and health service to sample app.

--- a/samples/Sample.NavigationService/Dockerfile
+++ b/samples/Sample.NavigationService/Dockerfile
@@ -4,6 +4,11 @@ FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
 
+# Install gRPC probe
+RUN GRPC_HEALTH_PROBE_VERSION=v0.3.1 && \
+    wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/${GRPC_HEALTH_PROBE_VERSION}/grpc_health_probe-linux-amd64 && \
+    chmod +x /bin/grpc_health_probe
+
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /src
 COPY ["samples/Sample.NavigationService/Sample.NavigationService.csproj", "samples/Sample.NavigationService/"]
