--- a/src/LightOps.Commerce.Services.Navigation.Backends.InMemory/LightOps.Commerce.Services.Navigation.Backends.InMemory.csproj
+++ b/src/LightOps.Commerce.Services.Navigation.Backends.InMemory/LightOps.Commerce.Services.Navigation.Backends.InMemory.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+
+    <PackageId>LightOps.Commerce.Services.Navigation.Backends.InMemory</PackageId>
+    <Authors>SorenA</Authors>
+    <Description>.NET Core backend package for LightOps.Commerce.Services.Navigation based on in-memory stores.</Description>
+    <IsPackable>true</IsPackable>
+    <RepositoryUrl>https://github.com/SorenA/lightops-commerce-services-navigation</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
