--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -111,6 +111,7 @@ stages:
           vmImage: ubuntu-18.04
         steps:
           - task: Docker@2
+            displayName: Docker build
             inputs:
               command: build
               Dockerfile: '**/Dockerfile'
