--- a/src/LightOps.Commerce.Services.Navigation/LightOps.Commerce.Services.Navigation.csproj
+++ b/src/LightOps.Commerce.Services.Navigation/LightOps.Commerce.Services.Navigation.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <PackageId>LightOps.Commerce.Services.Navigation</PackageId>
     <Authors>SorenA</Authors>
@@ -16,10 +16,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore" Version="2.29.0" />
+    <None Remove="Protos\type\localized_string.proto" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
     <PackageReference Include="LightOps.CQRS" Version="0.3.0" />
-    <PackageReference Include="LightOps.Mapping" Version="0.3.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.5" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
